Bug 75615 - glib: Fixes in the API reference documentation
Summary: glib: Fixes in the API reference documentation
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: glib frontend (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-28 17:21 UTC by Adrian Perez de Castro
Modified: 2014-03-02 18:47 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch (2.47 KB, text/plain)
2014-02-28 17:21 UTC, Adrian Perez de Castro
Details
Patch (2.47 KB, patch)
2014-03-02 18:34 UTC, Adrian Perez de Castro
Details | Splinter Review

Description Adrian Perez de Castro 2014-02-28 17:21:53 UTC
Created attachment 94903 [details]
Patch

[PATCH] glib: Fixes in the API reference documentation

- Remove the references to non-existent methods for PopplerStructureElement,
  and point to PopplerStructureElementIter instead to point out how to
  obtain the structure tree.
- Remove a non-existent include in poppler-docs.sgml
- Add POPPLER_TYPE_TEXT_SPAN to the list of private symbols.
Comment 1 Carlos Garcia Campos 2014-03-01 07:42:00 UTC
This patch doesn't apply, does it depend on any other?
Comment 2 Adrian Perez de Castro 2014-03-02 18:34:40 UTC
Created attachment 94975 [details] [review]
Patch

This new version of the patch should apply cleanly, sorry the previous version didn't.
Comment 3 Carlos Garcia Campos 2014-03-02 18:47:10 UTC
Pushed thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.