glib: Fixes in the API reference documentation

- Remove the references to non-existent methods for PopplerStructureElement,
  and point to PopplerStructureElementIter instead to point out how to
  obtain the structure tree.
- Remove a non-existent include in poppler-docs.sgml
- Add POPPLER_TYPE_TEXT_SPAN to the list of private symbols.

https://bugs.freedesktop.org/show_bug.cgi?id=75615